--- a/yaml-homework.yaml
+++ b/yaml-homework.yaml
@@ -7,12 +7,18 @@
 Fruit: Apple
 Drink: Water
 Dessert: Cake
+Vegetable: Carrot
 
 # Exercise 2: Add a list of Vegetables - Carrot, Tomato, Cucumber
 Fruits:
   - Apple
   - Banana
   - Orange
+
+Vegetable:
+  - Carrot
+  - Tomato
+  - Cucumber
 
 # Exercise 3: Based on the nutrition information for fruits. Similiarly, update
 # the nutrition information for Vegetables, use the below table
@@ -25,24 +31,53 @@ Fruits:
 
 Fruits:
   - Apple:
-        Calories: 95
-        Fat: 0.3
-        Carbs: 25
+      Calories: 95
+      Fat: 0.3
+      Carbs: 25
   - Banana:
       Calories: 105
       Fat: 0.4
       Carbs: 27
   - Orange:
-        Calories: 45
-        Fat: 0.1
-        Carbs: 11
+      Calories: 45
+      Fat: 0.1
+      Carbs: 11
+
+Vegetables:
+  - Carrot:
+      Calories: 25
+      Fat: 0.1
+      Carbs: 6
+  - Tomato:
+      Calories: 22
+      Fat: 0.2
+      Carbs: 4.8
+  - Cucumber:
+      Calories: 8
+      Fat: 0.1
+      Carbs: 1.9
 
 # Exercise 4: Jacob is 30 year old Male working as a Systems Engineer at a firm. 
 # Represent Jacob's information (Name, Sex, Age, Title) in YAML format. 
 # Create a dictionary named Employee and define properties under it.
 
+Employee:
+  Name: Jacob
+  Sex: Male
+  Age: 30
+  Title: Systems Engineer
+
 # Exercise 5: Update the above YAML exercise to represent the Projects assigned to Jacob. 
 # Remember Jacob works on Multiple projects - Automation and Support. So remember to use a list
+
+Employee:
+  Name: Jacob
+  Sex: Male
+  Age: 30
+  Title: Systems Engineer
+  Projects:
+    - Automation
+    - Support
 
 # Exercise 6: Update the above YAML exercise to include Jacob's pay slips. 
 # Add a new property "Payslips" and create a list of pay slip details (Use list of dictionaries). 
@@ -54,5 +89,21 @@ Fruits:
 # |  July     |   4500   |
 # |  August   |   4000   |
 
-
-
+Employee:
+  Name: Jacob
+  Sex: Male
+  Age: 30
+  Title: Systems Engineer
+  Projects:
+    - Automation
+    - Support
+  Payslips:
+    - Payslip1:
+        Month: June
+        Wage: 4000
+    - Payslip2:
+        Month: July
+        Wage: 4500
+    - Payslip3:
+        Month: August
+        Wage: 4000
